--- a/src/App.css
+++ b/src/App.css
@@ -14,18 +14,43 @@
 }
 
 .App-header {
+
   background-color: #282c34;
-  min-height: 100vh;
+  padding: 0 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  justify-content: left;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.square {
+  width: 50%;
+  float: left;
+}
+
+.row  {
+  display: inline-block;
+  width: 100%;
+}
+
+.container {
+  padding: 10px 20px;
+}
+.scroll {
+  max-height: 75vh;
+  overflow:scroll;
+}
+
+@media screen and (max-width: 768px) {
+  .square {
+    width: 100%;
+  }
 }
 
 @keyframes App-logo-spin {
