--- a/src/App.css
+++ b/src/App.css
@@ -3,25 +3,42 @@
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  font-weight: bold;
+  font-size: 16px;
+  width: 60px;
+  height: auto;
 }
 
 .App-header {
   background-color: #282c34;
-  padding: 0 10px;
+  padding: 5px 20px;
   display: flex;
-  flex-direction: column;
-  align-items: left;
+  flex-direction: 'space-between';
+  align-items: center;
   justify-content: left;
-  font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-header nav ul {
+  list-style: none;
+  font-size: 14px;
+  line-height: 14px;
+}
+
+.App-header nav ul li {
+  display: inline-block;
+  padding: 0 20px;
+}
+
+.App-header nav ul li a {
+  color: white;
+  text-decoration: none;
+  transition: all 0.3s ease 0s;
+  font-weight: 500;
+}
+
+.App-header nav ul li a:hover {
+  color: #009fdf;
 }
 
 .App-link {
@@ -51,14 +68,5 @@
   .square {
     width: 100%;
     margin: 0;
-  }
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
   }
 }
